[tool.poetry]
name = "technical-support-tg-bot"
version = "0.1.0"
description = ""
authors = ["andrei_turobov <forgunn@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.7"
django-environ = "^0.11.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
dishka = "^1.4.1"
faststream = {extras = ["cli"], version = "^0.5.30"}
watchfiles = "^0.24.0"
aiosqlite = "^0.20.0"
aiokafka = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
